# Wutu

./: .gitignore  .merlin  Makefile  README.md  dune  dune-project  temp.wat
compiler/: .ocamlformat  asmgen.ml  assembly.ml  compile.ml  constants.ml  dune  errors.ml  experiment.ml  exprs.ml  foo.ml  gc.c  graph.ml  lexer.mll  main.c  main.ml  main_node.js  parser.mly  phases.ml  pretty.ml  runner.ml  runtime.js  server.ml  wast.ml  watgen.ml
experiment/: closure.js  closure.wasm  closure.wat  interop.wat  overflow.wat  simple.wasm  table_grow.wasm  table_grow.wat  tagcheck.js  tagcheck.wat  tuple.wat
notes/: notes.md  resources.md  todo.md
playground/: foo.ml  index.html  main.js  main_web.js  server.ml  simple.wasm  simple.wat  sserver.ml  styles.css  temp.wasm  temp.wat
reference/: log.md  notes.md  present.md  todo.md
reference/experiment/: closure.wasm  input.js  interop.js  interop.wasm  interop.wat  main_node.js  main_web.js  overflow.js  overflow.wasm  simple.wat  table_grow.js  table_grow.wat  tagcheck.wasm  tagcheck.wat  tuple.js  tuple.wasm  tuple.wat
tests/: harness.js  helpers.ml  integration.ml  temp.ml  test.ml  unit.ml
tests/input/: README.txt  lists.wutu
tests/input/do_err/: README  and_type_err.err  and_type_err.wutu  print_overflow.err  print_overflow.wutu  tag_check.err  tag_check.wutu
tests/input/do_pass/: README  accessTuple.wutu  compareFunc.wutu  complex1.wutu  complex2.wutu  const.wutu  escaping.wutu  even_odd.wutu  fact.wutu  factTail.wutu  funcLambda.wutu  id.wutu  if_does_one.wutu  mapPrint.out  mapPrint.wutu  max.wutu  mul_overflow.out  mul_overflow.wutu  nestedMutualRec.wutu  nestedfunc.wutu  print1.wutu  print2.wutu  shadow.wutu  short-circuit.wutu  stressTest.wutu  tuple_updates.out  tuple_updates.wutu
tests/input/dont_err/: README
tests/input/dont_pass/: README
tests/output/do_err/: README.txt
