(library
 (name wutu)
 (modules
  asmgen
  assembly
  compile
  constants
  errors
  exprs
  graph
  lexer
  parser
  phases
  pretty
  runner
  wast
  watgen)
 (libraries ounit2 extlib str)
 (wrapped false))

(executable
 (name main)
 (modules main)
 (libraries unix str wutu))

(executable
 (name server)
 (modules server)
 (libraries
  async_kernel
  base
  base64
  cohttp-async
  core_unix.command_unix
  http
  mirage-crypto
  yojson))

(library
 (name tester)
 (modules helpers integration unit temp)
 (libraries ounit2 extlib str wutu)
 (wrapped false))

(test
 (name test)
 (modules test)
 (libraries tester wutu))

(include_subdirs unqualified)

(env
 (dev
  (flags
   (:standard -warn-error -A))))
