(library
 (name wutu_experiment)
 (modules experiment)
 (libraries ounit2 extlib str wasm)
 (wrapped false))

; (ocamllex
;  (modules lexer))

; (ocamlyacc
;  (modules parser))

(executable
 (name main)
 (modules main)
 (libraries unix str wutu_experiment))

(executable
 (name server)
 (modules server)
 (libraries
  mirage-crypto
  http
  cohttp-async
  base
  async_kernel
  core_unix.command_unix
  base64
  yojson))

; (test
;  (name test)
;  (modules test)
;  (libraries unix str fdl_impl))

(env
 (dev
  (flags
   (:standard -warn-error -A))))
